2003-03-31  Andreas Schwab  <schwab@suse.de>
	    Daniel Jacobowitz  <drow@mvista.com>

	* simple.c (bfd_simple_get_relocated_section_contents): Add
	parameter symbol_table.  Optionally use it instead of the symbol
	table from the bfd.  Save and restore output offsets and output
	sections  around bfd_get_relocated_section_contents.  Fix a memory
	leak.
	(simple_save_output_info, simple_restore_output_info): New
	functions.
	* bfd-in2.h: Regenerate.
	* dwarf2.c (read_abbrevs): Use
	bfd_simple_get_relocated_section_contents instead of
	bfd_get_section_contents.
	(decode_line_info): Likewise.
	(_bfd_dwarf2_find_nearest_line): Likewise.  Don't call
	find_rela_addend.
	(find_rela_addend): Remove.
	* elfxx-ia64.c (elfNN_ia64_reloc): Weaken sanity check for
	debugging sections.
	(elfNN_ia64_hash_table_create): Create the hash table with malloc,
	not bfd_zalloc.

2003-03-31  David Heine  <dlheine@suif.stanford.edu>

	* aoutx.h (aout_link_hash_table_create): Use bfd_malloc instead of
	bfd_alloc.
	* dwarf2.c (concat_filename): Always allocate space for the
	returned filename.
	(decode_line_info): Free the allocated filename returned by
	concat_filename.
	* elf-eh-frame.c (bfd_elf_write_section_eh_frame): Fix memory leaks.
	* elf.c (copy_private_bfd_data): Likewise.
	(_bfd_elf_slurp_version_tables): Fix bug freeing contents pointer.
	* elflink.h (elf_link_sort_relocs): Fix memory leak.
	* format.c (bfd_check_format_matches): Likewise.
	* linker.c (bfd_generic_final_link): Likewise.
	* opncls.c (find_separate_debug_info): Likewise.
	* simple.c (bfd_simple_get_relocated_section_contents): Likewise.
	
2003-03-28  H.J. Lu <hjl@gnu.org>

	* elflink.h (elf_link_add_object_symbols): Correctly combine
	visibilities.

2003-03-27  Jakub Jelinek  <jakub@redhat.com>

	* elfxx-ia64.c (elfNN_ia64_relax_section): Reset self_dtpmod_offset
	to -1 before recomputing got offsets.

2003-03-26  Andreas Schwab  <schwab@suse.de>

	* elf32-m68k.c (WILL_CALL_FINISH_DYNAMIC_SYMBOL): Define.